@@ -47,6 +47,8 @@ core 2.2.1 - not released yet
 	* Added: TodoyuFileManager::includeFile() was wrapper for include()/include_once()
 	* Added: Todoyu.String.getCounter() to extract a counter value from a string
 	* Added: Todoyu.Tabs.updateTabCounter() and .getTabCounter()
+	* Added: Dwoo plugin escapeQuotesForHtmlAttributes which replaces quotes by ASCII codes
+	* Added: TodoyuArray::assureFromSerialized()
 	* Changed: extracted select-group-options from template
 	* Changed: Renamed TodoyuArray::prefix() to prefixValues()
 	* Changed: Removed $parseConstants from TodoyuArray::intExplode(). Was not used and supported. Added $limi parameter as for trimExplode()
@@ -60,6 +62,8 @@ core 2.2.1 - not released yet
 	* Changed: Cleanup radio form element. Removed sql as source type. Support default value
 	* Changed: Clone field objects when added to a fieldset. Allows to add a field multiple times under different names
 	* Changed: Clone fieldsets when added to a form or another fieldset
+	* Changed: Send 404 http status if controller is not found
+	* Changed: TodoyuArray::explode() return the $string if it is already an array
 	* Library: Upgraded from PHPMailer-lite 5.1 to PHPMailer 5.2.1
 	* Library: Highcharts 2.2.3
 	* Library: tinyMCE 3.5.4.1
